Visual presentation starting to become useful

--- a/james.html
+++ b/james.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <title>James Cookie</title>
+    <link rel="stylesheet" href="james.css" />
     <script src="james.js" defer></script>
 </head>
 
 <body>
-    <h1>James Cookie</h1>
-    <p>Cookie stores</p>
-    <ul id="cookie-stores"></ul>
+    <h1>James the Cookie Explorer</h1>
+    <div id="cookie-stores"></div>
 </body>
 
 </html>
