Classification of cookies: very basic GA/other. Filters.

--- a/james.html
+++ b/james.html
@@ -10,6 +10,16 @@
 
 <body>
     <h1>James the Cookie Explorer</h1>
+
+    <div>
+        <input id="cs-ga" name="google-analytics" type="checkbox" checked />
+        <label for="cs-ga">Google Analytics</label>
+    </div>
+    <div>
+        <input id="cs-other" name="other" type="checkbox" checked />
+        <label for="cs-other">Other</label>
+    </div>
+
     <div id="cookie-stores"></div>
 </body>
 
