--- a/james.html
+++ b/james.html
@@ -59,7 +59,22 @@
         </div>
     </fieldset>
 
-    <div id="cookie-stores"></div>
+    <div>
+        <table id="cookie-table">
+            <thead>
+                <tr>
+                    <th scope='col'>Domain</th>
+                    <th scope='col'>Path</th>
+                    <th scope='col'>Name</th>
+                    <th scope='col'>Expiration</th>
+                    <th scope='col'>Value</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
+
 </body>
 
 </html>
