--- a/james.html
+++ b/james.html
@@ -63,11 +63,11 @@
         <table id="cookie-table">
             <thead>
                 <tr>
-                    <th scope='col'>Domain</th>
-                    <th scope='col'>Path</th>
-                    <th scope='col'>Name</th>
-                    <th scope='col'>Expiration</th>
-                    <th scope='col'>Value</th>
+                    <th id="heading-domain" class="sort" scope="col">Domain</th>
+                    <th scope="col">Path</th>
+                    <th id="heading-name" scope="col">Name</th>
+                    <th id="heading-expiration" scope="col">Expiration</th>
+                    <th scope="col">Value</th>
                 </tr>
             </thead>
             <tbody>
