--- a/james.html
+++ b/james.html
@@ -16,7 +16,7 @@
     <p>Note: cookies may include secret information such as session keys. Do not share this information with anyone.</p>
 
     <fieldset>
-        <legend>Cookie type</legend>
+        <legend>Category</legend>
         <div>
             <input id="cs-ga" name="google-analytics" type="checkbox" checked />
             <label for="cs-ga">Google Analytics</label>
@@ -66,7 +66,7 @@
                     <th id="heading-domain" class="sort" scope="col">Domain</th>
                     <th scope="col">Path</th>
                     <th id="heading-name" scope="col">Name</th>
-                    <th id="heading-expiration" scope="col">Expiration</th>
+                    <th id="heading-expiration" scope="col">Expiration date</th>
                     <th scope="col">Value</th>
                 </tr>
             </thead>
